--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,5 @@
 {
-  "name": "ionic-wordpress-example",
+  "name": "ultra-fighting-constituencies",
   "app_id": "",
   "type": "ionic-angular",
   "integrations": {
