--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "cordova": "^8.0.0",
     "cordova-android": "^6.2.3",
     "cordova-browser": "^4.1.0",
-    "cordova-ios": "^4.4.0",
+    "cordova-ios": "4.5.4",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-nativestorage": "^2.3.1",
