--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.1",
     "cordova": "^8.0.0",
-    "cordova-android": "^6.2.3",
+    "cordova-android": "6.4.0",
     "cordova-browser": "^4.1.0",
     "cordova-ios": "4.5.4",
     "cordova-plugin-console": "^1.1.0",
