--- a/package.json
+++ b/package.json
@@ -20,18 +20,23 @@
     "@angular/http": "4.1.3",
     "@angular/platform-browser": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
-    "@ionic-native/core": "3.12.1",
+    "@ionic-native/core": "^4.7.0",
     "@ionic-native/native-storage": "^4.2.1",
+    "@ionic-native/photo-library": "^4.7.0",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.1",
+    "ajv": "^6.4.0",
     "cordova": "^8.0.0",
     "cordova-android": "6.4.0",
     "cordova-browser": "^4.1.0",
     "cordova-ios": "4.5.4",
+    "cordova-plugin-add-swift-support": "^1.6.0",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-file": "^5.0.0",
     "cordova-plugin-nativestorage": "^2.3.1",
+    "cordova-plugin-photo-library": "^2.1.1",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -56,7 +61,10 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-whitelist": {},
-      "ionic-plugin-keyboard": {}
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-photo-library": {
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "選擇相片"
+      }
     },
     "platforms": [
       "android",
