--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ultra-fighting-constituencies",
+  "name": "com.mobilecomic.ultrafightingconstituencies",
   "version": "0.0.1",
   "author": "Mobilecomic",
   "homepage": "http://mobilecomic.com/",
